# canon-mini-agent

./: .#GOAL.md  .#Txt.txt  .gitignore  APPLY_PATCH_PYTHON_PROBE.md  ARCHITECTURE.md  AUTHORITY_MATRIX.md  CANONICAL_LAW.md  CANONICAL_PIPELINE.md  CANONICAL_PIPELINE.updated.md  CONTROL_TO_TLOG_AUDIT.md  Cargo.toml  GAPS.md  GOAL.md  GRAPH_REDUCTION_PLAN.md  MIR_ADDITIONS_REFACTOR.md  OBJECTIVES.md  PENDING-TO-DO.md  PLAN.md  PROJECT_MILESTONE_CHECKLIST.md  PROJECT_RUBRIC_COMPLETION.md  REDUCTION_SYSTEM.md  REPORT.txt  SCORING_EQUATIONS.md  SIMPLIFY.md  SOTA_Autonomous_Agent_Pipeline.md  SOTA_PIPELINE.md  SPEC.md  SYMBOL_REDUCTION_STUDY.md  TO-DO.md  TO-DO.txt  Txt.txt  apply-restart-reload-learning.sh  apply_artifact_id.sh  apply_artifact_lineage_verifier.sh  apply_canonical_repair_binding.sh  apply_repair_plan_verifier.sh  apply_repair_prompt_contract_v2.sh  build.rs  canon-mini-agent-canonical-repair-binding.apply_patch  canon-mini-agent-enforce-supervisor-cargo-test-projection.apply_patch  (+36 more)
.cargo/: config.toml
PLANS/: INVARIANT.md  OBJECTIVES.md
agent_state/: last_planner_blocker_evidence.txt  tlog.ndjson  wakeup_executor.flag
canon-chromium-extension/: background.js  content.js  inject.js  launch_chromium.sh  request_gemini.js  request_hook_group.js  request_hook_private.js  tar.sh
mir_cfg_dot/: INDEX.md  app__app_ActionProvenance_from_action.dot  app__app_AgentCompletion_into_summary.dot  app__app_AgentCompletion_summary_text.dot  app__app_LlmResponseContext_a_handle_reaction_only.dot  app__app_LlmResponseContext_a_handle_submit_ack.dot  app__app_LlmResponseContext_a_log_error.dot  app__app_LlmResponseContext_a_log_request.dot  app__app_LlmResponseContext_a_log_response.dot  app__app_LlmResponseContext_a_record_effect.dot  app__app_SHUTDOWN_SIGNAL.dot  app__app_action_retry_fingerprint.dot  app__app_append_executor_completion_log.dot  app__app_append_external_user_message_to_prompt.dot  app__app_append_inbound_to_prompt.dot  app__app_apply_diagnostics_pending_if_changed.dot  app__app_apply_error_result.dot  app__app_apply_lane_pending_if_changed.dot  app__app_apply_planner_pending_if_changed.dot  app__app_apply_route_gate_block.dot  app__app_apply_scheduled_phase_if_changed.dot  app__app_apply_wake_signals.dot  app__app_artifact_signature.dot  app__app_blocker_escalation_prompt.dot  app__app_blocker_target_role.dot  app__app_build_agent_prompt.dot  app__app_build_blocker_payload.dot  app__app_build_endpoints.dot  (+1538 more)
(+305 files in other folders)
