[package]
name = "canon-mini-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "canon_mini_agent"
path = "src/lib.rs"

[[bin]]
name = "canon-mini-agent"
path = "src/main.rs"
test = false

[[bin]]
name = "canon-mini-supervisor"
path = "src/bin/canon-mini-supervisor.rs"
test = false

[[bin]]
name = "canon-exec"
path = "src/bin/canon-exec.rs"
test = false

[[bin]]
name = "canon-step"
path = "src/bin/canon-step.rs"
test = false

[[bin]]
name = "canon-route"
path = "src/bin/canon-route.rs"
test = false

[[bin]]
name = "canon-tickets"
path = "src/bin/canon-tickets.rs"
test = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
jsonschema = "0.17"
tokio = { version = "1", features = ["full"] }
canon-tools-patch = { path = "../canon/canon-utils/canon-tools-patch" }
canon_llm = { package = "canon-llm-runtime", path = "../canon/canon-utils/canon-llm-runtime" }
ctrlc = "3"
ra_ap_syntax = "0.0.327"
