[package]
name = "canon-mini-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "canon_mini_agent"
path = "src/lib.rs"

[[bin]]
name = "canon-mini-agent"
path = "src/main.rs"
test = false

[[bin]]
name = "canon-mini-supervisor"
path = "src/bin/canon-mini-supervisor.rs"
test = false

[[bin]]
name = "canon-user-chat"
path = "src/bin/canon-user-chat.rs"
test = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
jsonschema = "0.17"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
once_cell = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
ctrlc = "3"
ra_ap_syntax = "0.0.327"
thiserror = "1"
